samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <nameField>
        <label>Application Number</label>
        <type>AutoNumber</type>
        <displayFormat>APP-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>