samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Application__c/fields/Employment_Info__c.field-meta.xml
<CustomField>
    <fullName>Employment_Info__c</fullName>
    <label>Employment Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>