samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Application__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>