samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Application__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <label>References</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>