samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Application__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Proposed Start</label>
    <type>Date</type>
</CustomField>